# poker-hand-detector-cpp

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  playingCards.onnx
include/: CMakeLists.txt  Camera.hpp  HandDetector.hpp  LiveGameTracker.hpp
models/: Classes.txt
src/: CMakeLists.txt  Camera.cpp  HandDetector.cpp  LiveGameTracker.cpp
utils/: config.yaml  helperClasses.hpp
